For student module, update to include regions, gender and immigration status. Update text for the UI. Fix bug filter tags covering up part of charts Fix bug for country names overflowing on geo chart. Set up pouchdb(indexdb) to use instead of localstorage do to localstorage limit.

--- a/UCosmic.Web.Mvc/components/pages/Student/Table/table.scss
+++ b/UCosmic.Web.Mvc/components/pages/Student/Table/table.scss
@@ -51,7 +51,9 @@ paper-item span {
         font-weight: bold;
     }
     .chart_counts{
-        margin-left: 10px;
+        margin-left: 10px;    
+        overflow: hidden;
+        height: 3em;
     }
     .action_close_container{
         margin-right: 5px;
